# Public/openapi.yaml
@@ -6,8 +6,71 @@ info:
 
 servers:
   - url: http://localhost:8080
+  
+tags:
+  - name: Authentication
+    description: Login & user authentication
+  - name: Books
+    description: Protected book API
+
 
 paths:
+
+  /authentication/register:
+    post:
+      tags:
+        - Authentication
+      summary: Register new user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RegisterRequest"
+      responses:
+        "201":
+          description: User registered
+        "400":
+          description: Validation error
+
+  /authentication/login:
+    post:
+      tags:
+        - Authentication
+      summary: Login user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LoginRequest"
+      responses:
+        "200":
+          description: Login success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LoginResponse"
+        "401":
+          description: Unauthorized
+                    
+  /authentication/me:
+    get:
+      tags:
+        - Authentication
+      summary: Get current authenticated user
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Current user profile
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "401":
+          description: Unauthorized
+          
   /books:
     get:
       summary: Get list of books
@@ -60,7 +123,7 @@ paths:
             schema:
               $ref: "#/components/schemas/BookInput"
       responses:
-        "200":
+        "201":
           description: Book created
           content:
             application/json:
@@ -181,3 +244,58 @@ components:
           type: string
         year:
           type: integer
+          
+    LoginRequest:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+          example: hery@mail.com
+        password:
+          type: string
+          example: "123456"
+          
+    LoginResponse:
+      type: object
+      properties:
+        token:
+          type: string
+          example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+          
+    RegisterRequest:
+      type: object
+      required:
+        - name
+        - email
+        - password
+        - confirmPassword
+      properties:
+        name:
+          type: string
+          example: Hery Hamzah
+        email:
+          type: string
+          example: hery@mail.com
+        password:
+          type: string
+          example: "123456"
+        confirmPassword:
+          type: string
+          example: "123456"
+
+    UserResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          example: d290f1ee-6c54-4b01-90e6-d701748f0851
+        name:
+          type: string
+          example: Hery Hamzah
+        email:
+          type: string
+          example: hery@mail.com
