# Sources/hello/Models/LoginResponse.swift
@@ -1,0 +1,13 @@
+//
+//  Login.swift
+//  hello
+//
+//  Created by MD-HeryHamzah on 31/12/25.
+//
+
+
+import Vapor
+
+struct LoginResponse: Content {
+    var token: String
+}
